# eSGraph

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  benchmark_report.md
.github/workflows/: ci.yml  coverage.yml
benchmarks/: CMakeLists.txt
benchmarks/include/: BenchmarkFramework.hpp  HierarchyBuilders.hpp
benchmarks/src/: BenchmarkMain.cpp  HierarchyBuilders.cpp  NodeBenchmarks.cpp
cmake/: eSGraphConfig.cmake.in
include/: Node.hpp
src/: Node.cpp
tests/: CMakeLists.txt  run_tests
tests/include/: NodeTests.hpp
tests/src/: NodeTests.cpp
